# kuronuri-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  mise.toml  pyproject.toml  server.py
evals/: test-cases.md
references/: architecture.md
test/: .gitignore  README.md
test/data/: sample_en.txt  sample_ja.txt
test/scripts/: 01_basic.py  02_file_batch.py  03_mcp_client.py  04_claude_code_test.md  04_mask_ja.py  05_claude_code_test.md
tests/: conftest.py  test_list_ner_tags.py  test_mask_text.py
