[project]
name = "kuronuri-mcp"
version = "0.1.0"
description = "MCP server that exposes kuronuri PII masking to Claude"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "kuronuri>=0.2.0",
    "torch>=2.11.0",
]

[project.urls]
Homepage = "https://github.com/shogo-ogami/kuronuri-mcp"
Repository = "https://github.com/shogo-ogami/kuronuri-mcp"
Issues = "https://github.com/shogo-ogami/kuronuri-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ty]
python-version = "3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--tb=short"

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
